// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEventReadButton is rendered 1`] = `
<button
  aria-label="Mark eventName as unread"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall euiNotificationEventReadButton euiNotificationEventReadButton--isRead css-1gfimnf-empty-primary-EuiButtonIcon"
  data-test-subj="id-notificationEventReadButton"
  title="Mark as unread"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="dot"
  />
</button>
`;

exports[`EuiNotificationEventReadButton renders isRead to false 1`] = `
<button
  aria-label="Mark eventName as read"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall euiNotificationEventReadButton css-1gfimnf-empty-primary-EuiButtonIcon"
  data-test-subj="id-notificationEventReadButton"
  title="Mark as read"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="dot"
  />
</button>
`;
